auto sync 周五 2026/03/27 10:22:46.20